meshについて理解した

--- a/understand_src/datasets.ipynb
+++ b/understand_src/datasets.ipynb
@@ -17,8 +17,8 @@
     "\n",
     "sys.path.append(os.path.join(Path().resolve(), '../')) # add parent directory to path\n",
     "\n",
-    "from ptlk.data import globset\n",
-    "from ptlk.data import mesh\n",
+    "from ptlk.data import globset  # データの扱い\n",
+    "from ptlk.data import mesh  # 点などを読み込む\n",
     "from ptlk import so3\n",
     "from ptlk import se3"
    ]
@@ -202,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
