--- a/understand_src/mesh.ipynb
+++ b/understand_src/mesh.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,9 +12,15 @@
     "import numpy\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "from mpl_toolkits.mplot3d.art3d import Poly3DCollection\n",
-    "import matplotlib.pyplot\n",
-    "\n",
-    "\n",
+    "import matplotlib.pyplot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class Mesh:\n",
     "    def __init__(self):\n",
     "        self._vertices = [] # array-like (N, D)\n",
@@ -108,8 +114,15 @@
     "        v[:, 0] = -y\n",
     "        v[:, 1] = x\n",
     "        self._vertices = list(map(tuple, v))\n",
-    "        return self\n",
-    "\n",
+    "        return self"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def offread(filepath, points_only=True):\n",
     "    \"\"\" read Geomview OFF file. \"\"\"\n",
     "    with open(filepath, 'r') as fin:\n",
@@ -123,10 +136,10 @@
     "    mesh = Mesh()\n",
     "\n",
     "    fixme = False\n",
-    "    sig = fin.readline().strip()\n",
+    "    sig = fin.readline().strip()  # 一行目に'OFF'という文字列がある\n",
     "    if sig == 'OFF':\n",
     "        line = fin.readline().strip()\n",
-    "        num_verts, num_faces, num_edges = tuple([int(s) for s in line.split(' ')])\n",
+    "        num_verts, num_faces, num_edges = tuple([int(s) for s in line.split(' ')])  # 2行目に頂点数、面数、辺数がある\n",
     "    elif sig[0:3] == 'OFF': # ...broken data in ModelNet (missing '\\n')...\n",
     "        line = sig[3:]\n",
     "        num_verts, num_faces, num_edges = tuple([int(s) for s in line.split(' ')])\n",
@@ -135,7 +148,7 @@
     "        raise RuntimeError('unknown format')\n",
     "\n",
     "    for v in range(num_verts):\n",
-    "        vp = tuple(float(s) for s in fin.readline().strip().split(' '))\n",
+    "        vp = tuple(float(s) for s in fin.readline().strip().split(' '))  # 座標をリストとして保存\n",
     "        mesh._vertices.append(vp)\n",
     "\n",
     "    if points_only:\n",
@@ -148,6 +161,7 @@
     "    return mesh, fixme\n",
     "\n",
     "def _fix_modelnet_broken_off(filepath):\n",
+    "    '''データの不具合を修正する'''\n",
     "    oldfile = '{}.orig'.format(filepath)\n",
     "    os.rename(filepath, oldfile)\n",
     "    with open(oldfile, 'r') as fin:\n",
@@ -157,9 +171,45 @@
     "            print('OFF', file=fout)\n",
     "            print(line, file=fout)\n",
     "            for line in fin:\n",
-    "                print(line.strip(), file=fout)\n",
-    "\n",
-    "\n",
+    "                print(line.strip(), file=fout)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mesh = offread('../expriments/dataset/ModelNet40/airplane/train/airplane_0001.off')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "mesh.plot()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def objread(filepath, points_only=True):\n",
     "    \"\"\"Loads a Wavefront OBJ file. \"\"\"\n",
     "    _vertices = []\n",
@@ -236,7 +286,6 @@
     "    return mesh\n",
     "\n",
     "\n",
-    "\n",
     "if __name__ == '__main__':\n",
     "    def test1():\n",
     "        mesh = plyread('room37462.ply', points_only=False)\n",
@@ -252,8 +301,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "DeepLearning",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
