--- a/expriments/ptlk_transfer.ipynb
+++ b/expriments/ptlk_transfer.ipynb
@@ -46,46 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "odict_keys(['dt', 'ptnet.h1.0.weight', 'ptnet.h1.0.bias', 'ptnet.h1.1.weight', 'ptnet.h1.1.bias', 'ptnet.h1.1.running_mean', 'ptnet.h1.1.running_var', 'ptnet.h1.1.num_batches_tracked', 'ptnet.h1.3.weight', 'ptnet.h1.3.bias', 'ptnet.h1.4.weight', 'ptnet.h1.4.bias', 'ptnet.h1.4.running_mean', 'ptnet.h1.4.running_var', 'ptnet.h1.4.num_batches_tracked', 'ptnet.h2.0.weight', 'ptnet.h2.0.bias', 'ptnet.h2.1.weight', 'ptnet.h2.1.bias', 'ptnet.h2.1.running_mean', 'ptnet.h2.1.running_var', 'ptnet.h2.1.num_batches_tracked', 'ptnet.h2.3.weight', 'ptnet.h2.3.bias', 'ptnet.h2.4.weight', 'ptnet.h2.4.bias', 'ptnet.h2.4.running_mean', 'ptnet.h2.4.running_var', 'ptnet.h2.4.num_batches_tracked', 'ptnet.h2.6.weight', 'ptnet.h2.6.bias', 'ptnet.h2.7.weight', 'ptnet.h2.7.bias', 'ptnet.h2.7.running_mean', 'ptnet.h2.7.running_var', 'ptnet.h2.7.num_batches_tracked'])\n"
-     ]
-    }
-   ],
-   "source": [
-    "load_path = './model/ex1_pointlk_1030_model_best.pth'\n",
-    "load_weights = torch.load(load_path)\n",
-    "print(load_weights.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([1.0894, 1.0228, 1.0139,  ..., 1.0908, 0.9976, 0.9806])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "load_weights['ptnet.h2.7.weight']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -104,16 +65,93 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 事前学習済みの重みを読み込む\n",
-    "load_path = './model/ex1_pointlk_1030_model_best.pth'\n",
+    "load_path = './results/ex1/ex1_pointlk_1122_model_best.pth'\n",
     "load_weights = torch.load(load_path)\n",
     "base_model.load_state_dict(load_weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PointLK(\n",
+       "  (ptnet): PointNet_features(\n",
+       "    (h1): Sequential(\n",
+       "      (0): Conv1d(3, 64, kernel_size=(1,), stride=(1,))\n",
+       "      (1): BatchNorm1d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (2): ReLU()\n",
+       "      (3): Conv1d(64, 64, kernel_size=(1,), stride=(1,))\n",
+       "      (4): BatchNorm1d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (5): ReLU()\n",
+       "    )\n",
+       "    (h2): Sequential(\n",
+       "      (0): Conv1d(64, 64, kernel_size=(1,), stride=(1,))\n",
+       "      (1): BatchNorm1d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (2): ReLU()\n",
+       "      (3): Conv1d(64, 128, kernel_size=(1,), stride=(1,))\n",
+       "      (4): BatchNorm1d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (5): ReLU()\n",
+       "      (6): Conv1d(128, 1024, kernel_size=(1,), stride=(1,))\n",
+       "      (7): BatchNorm1d(1024, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (8): ReLU()\n",
+       "    )\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "base_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import open3d as o3d\n",
+    "\n",
+    "point_cloud = o3d.io.read_point_cloud('./dataset/PointCloudSet/chair/test/chair1593.ply')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "forward() missing 1 required positional argument: 'p1'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\furukawa\\study\\research\\pointCloudMatching\\expriments\\ptlk_transfer.ipynb セル 7\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/furukawa/study/research/pointCloudMatching/expriments/ptlk_transfer.ipynb#X13sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m base_model\u001b[39m.\u001b[39meval()\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/furukawa/study/research/pointCloudMatching/expriments/ptlk_transfer.ipynb#X13sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mwith\u001b[39;00m torch\u001b[39m.\u001b[39mno_grad():\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/furukawa/study/research/pointCloudMatching/expriments/ptlk_transfer.ipynb#X13sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     pred \u001b[39m=\u001b[39m base_model(point_cloud)\n",
+      "File \u001b[1;32mc:\\Users\\furukawa\\anaconda3\\envs\\Deeplearning\\lib\\site-packages\\torch\\nn\\modules\\module.py:1130\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[1;34m(self, *input, **kwargs)\u001b[0m\n\u001b[0;32m   1126\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[0;32m   1127\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[0;32m   1128\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[0;32m   1129\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[1;32m-> 1130\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39m\u001b[39minput\u001b[39m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m   1131\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[0;32m   1132\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
+      "\u001b[1;31mTypeError\u001b[0m: forward() missing 1 required positional argument: 'p1'"
+     ]
+    }
+   ],
+   "source": [
+    "base_model.eval()\n",
+    "with torch.no_grad():\n",
+    "    pred = base_model(point_cloud)"
    ]
   },
   {
@@ -200,7 +238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
